--- a/flask_vue1/templates/index.html
+++ b/flask_vue1/templates/index.html
@@ -17,59 +17,267 @@
 
 <!-- Vue.js container -->
 <div id="app" class="m-3">
-    {% raw %}
-    <mycomp/>
-    {% endraw %}
+    <message_board />
 </div>
     
-<!-- mycomp's template -->
+<!-- ********************** -->
+<!-- * Component Template * -->
+<!-- ********************** -->
+
+
 {% raw %}
-<script type="text/x-template" id="mycomp-template">
-    <div>
-        <div class="alert alert-info">
-            <h5>{{title}}</h5>
-            <p>{{data}}</p>
-        </div>
-        <div>
-            <select class="form-control" v-model="num" v-on:change="action">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-            </select>
+<script type="text/x-template" id="message_board-template">
+<div>
+
+
+<div class="text-right h6">
+    <a href="javascript:void(0)" 
+        v-on:click="in_out_check">{{in_out}}</a>
+</div>
+
+
+<div class="alert alert-success p-1">
+    <h5>{{ alert_msg }}</h5>
+</div>
+
+
+<!-- Tab Panel -->
+<ul class="nav nav-tabs" role="tablist">
+    <!-- 1つ目のタブ -->
+    <li class="nav-item">
+        <a class="nav-link active" href="#msgs" id="msg_tab_link"
+            data-toggle="tab" role="tab">Messages</a>
+    </li>
+    <!-- 2つ目のタブ -->
+    <li class="nav-item">
+        <a class="nav-link" href="#frms" id="frm_tab_link"
+            data-toggle="tab" role="tab">Form</a>
+    </li>
+</ul>
+    
+<!-- Tab Contents -->
+<div class="tab-content">
+    <!-- First Tab -->
+    <div class="tab-pane fade show active" id="msgs" 
+            ole="tabpanel" >
+        <div  v-if="login_flg">
+            <h5 class="p-3 h5 text-center">
+                * Posted Messages *
+            </h5>
+            <ul class="list-group list-group-flush">
+                <li v-for="item in msg_data"
+                        class="list-group-item">
+                    {{item[1]}} ({{item[0]}})
+                </li>
+            </ul>
         </div>
     </div>
+    <!-- Second Tab -->
+    <div class="tab-pane fade" id="frms" 
+            role="tabpanel">
+        <div  v-if="login_flg">
+            <h5 class="mt-4">
+                Post your message:
+            </h5>
+            <div class="card mt-4">
+                <div class="card-body">
+                    <div class="form-group ">
+                        <label for="comment">Message</label>
+                        <div class="row">
+                        <input type="text" class="form-control col" 
+                            id="comment" name="comment" v-model="post_msg">
+                        <button v-on:click="postMsg"
+                            class="btn btn-primary col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+                            POST NOW!</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Login Dialog -->
+<div class="modal fade" id="login">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="card-title">
+                        {{login_msg}}
+                    </h4>
+                </div>
+                <div class="card-body">
+                    <div class="form-group">
+                        <label for="id">id</label>
+                        <input type="text"  class="form-control" 
+                            id="id" name="id" v-model="form_id">
+                        <small class="form-text text-muted">
+                            ※IDを入力（未登録の場合は新たに登録したいIDを記入）
+                        </small>
+                    </div>
+                    <div class="form-group">
+                        <label for="pass">password</label>
+                        <input type="password"  class="form-control" 
+                            id="pass" name="pass" v-model="form_pass">
+                        <small class="form-text text-muted">
+                            ※パスワードを入力（未登録の場合は新たに登録するパスワードを記入）
+                        </small>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-primary" 
+                            v-on:click="login">login</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+</div>
 </script>
 {% endraw %}
 
 
+
 <!-- Vue.js script -->
+<!-- ******************** -->
+<!-- * Component Script * -->
+<!-- ******************** -->
+
+
 <script>
-// mycomp object
-Vue.component('mycomp', {
-    template: '#mycomp-template',
+// message_board object
+Vue.component('message_board', {
+    template: '#message_board-template',
     data: function() {
         return {
-            title:'Ajax data',
-            data: 'wait...',
-            num:0,
+            in_out:'login',
+            login_flg:false, login_id:'',
+            form_id:'', form_pass:'',
+            login_msg:'Login form:',
+            alert_msg:'※ログインして下さい。',
+            post_msg:'',
+            msg_data:[],
         }
     },
     methods:{
-        action: function(e) {
+        // check login/logout.
+        in_out_check: function(e) {
+            if (this.login_flg) {
+                this.logout();
+            } else {
+                this.show_login();
+            }
+        },
+        //show login dialog
+        show_login: function() {
+            this.form_id = '';
+            this.form_pass = '';
+            this.login_msg = 'Login Form:';
+            $('#login').modal('show');
+        },
+        // access server and logined.
+        login: function(e) {
+            let formData = new FormData();
+            formData.append("id", this.form_id);
+            formData.append("pass", this.form_pass);
             let self = this;
-            $.get("/ajax/" + this.num, function(data) {
-                self.data = data.id + ':' + data.name + ' [' + data.mail + ']';
+            $.ajax({
+                type: 'POST',
+                url: '/login',
+                data: formData,
+                processData: false,
+                contentType: false,
+
+
+                success: function (data) {
+                    if (data == 'True'){
+                        self.in_out = 'logout';
+                        self.login_flg = true;
+                        self.login_id = self.form_id;
+                        self.alert_msg = '※ログインしました！';
+                        self.form_id = '';
+                        self.form_pass = '';
+                        $('#login').modal('hide');
+                        self.getMsg();
+                    } else {
+                        self.login_msg = 'パスワードが違います。';
+                        self.pass = '';
+                    }
+                },
+                error: function(request, status, err) {
+                    self.login_msg = '※問題が発生しました。';
+                }
+            });
+        },
+        // logout.
+        logout: function() {
+            console.log('logout');
+            this.in_out = 'login';
+            this.msg_data = [];
+            this.login_flg = false;
+            this.login_id = '';
+            this.alert_msg = '※ログアウトしました。'
+        },
+        // post message.
+        postMsg: function() {
+            let formData = new FormData();
+            formData.append("id", this.login_id);
+            formData.append("comment", this.post_msg);
+            let self = this;
+            $.ajax({
+                type: 'POST',
+                url: '/post',
+                data: formData,
+                processData: false,
+                contentType: false,
+
+
+                success: function (data) {
+                    if (data == 'True') {
+                        self.alert_msg = '※メッセージを送信しました。'
+                        self.getMsg();
+                    }
+                },
+                error: function(request, status, err) {
+                    self.alert_msg = '※メッセージ送信に問題が発生しました。';
+                }
+            });
+        },
+        // get all messages.
+        getMsg: function() {
+            let self = this;
+            $.ajax({
+                type: 'POST',
+                url: '/messages',
+                processData: false,
+                contentType: false,
+
+
+                success: function (data) {
+                    console.log(data);
+                    self.msg_data = data.reverse();
+                    self.post_msg = '';
+                    $('#msg_tab_link').tab('show');
+                },
+                error: function(request, status, err) {
+                    self.alert_msg = '※メッセージ送信に問題が発生しました。';
+                }
             });
         }
-    }
+    },
 });
 
-			// start Vue.
-			new Vue({
-				el: '#app',
-			});
 
-		</script>
+// start Vue.
+new Vue({
+    el:'#app',
+});
+</script>
+
 
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
